Move graphs to top to avoid tooltip from going off screen

--- a/public/stylesheets/graph.css
+++ b/public/stylesheets/graph.css
@@ -14,7 +14,7 @@ body {
   width: 30%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   padding: 20px;
 }
 
